--- a/lucene-research/movies/src/components/Layout/Header.module.css
+++ b/lucene-research/movies/src/components/Layout/Header.module.css
@@ -20,6 +20,8 @@ li {
 a{
     text-decoration: none;
     color: white;
+    font-family: 'Roboto';
+    letter-spacing: 1.3px;
 }
 .navigation {
     width: 80%;
