Chart.js graphs added

--- a/lucene-research/movies/src/App.css
+++ b/lucene-research/movies/src/App.css
@@ -4,6 +4,8 @@
 
   /* background-color: white; */
   background-color: #0D2036;
+  /* background: linear-gradient(to bottom, #03000f99, #03000f48); */
+
   position: relative;
   overflow-x: hidden;
 
