--- a/lucene-research/movies/src/pages/Graphs.module.css
+++ b/lucene-research/movies/src/pages/Graphs.module.css
@@ -1,16 +1,45 @@
 .container {
-    width: 100%;
-    min-height: 100vh;
-  
-    position: relative;
-    
-    /* background-color: rgba(16, 16, 19, 0.593); */
-  
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  
-    color: white;  
-    overflow-x: hidden;
-  }
+  width: 100%;
+  min-height: 100vh;
+
+  position: relative;
+
+  /* background-color: rgba(16, 16, 19, 0.593); */
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  color: white;
+  overflow-x: hidden;
+
+  padding-top: 80px;
+}
+
+.intro{
+  width: 100%;
+  height: 150px;
+  margin-top: 10px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  font-family: 'Roboto';
+  letter-spacing: 1.3px;
+
+ 
+  margin: auto;
+  text-align: center;
+  /* background-color: red; */
+
+}
+
+
+
+h1{
+  font-size: 24px;
+  margin: 0;
+}
