--- a/lucene-research/movies/src/pages/Graphs.module.css
+++ b/lucene-research/movies/src/pages/Graphs.module.css
@@ -20,7 +20,7 @@
 .intro{
   width: 100%;
   height: 150px;
-  margin-top: 10px;
+ 
 
   display: flex;
   align-items: center;
@@ -31,12 +31,30 @@
   letter-spacing: 1.3px;
 
  
-  margin: auto;
+  margin: 40px auto;
   text-align: center;
   /* background-color: red; */
 
 }
 
+.libraries {
+  width: 50%;
+  margin: auto;
+  
+  /* background-color: red; */
+  height: 30px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+a p {
+  color: #EFE9E3;
+}
+
+a p:hover{
+  color: #B5E6E9;
+}
 
 
 h1{
