--- a/lucene-research/movies/src/pages/Movies/Movies.module.css
+++ b/lucene-research/movies/src/pages/Movies/Movies.module.css
@@ -3,7 +3,7 @@
   min-height: 100vh;
 
   position: relative;
-  
+
   /* background-color: rgba(16, 16, 19, 0.593); */
 
   display: flex;
@@ -11,42 +11,41 @@
   align-items: center;
   justify-content: center;
 
-  
   overflow-x: hidden;
 }
 
 .cover {
-    width: 100%;
-    min-height: 100vh;
+  width: 100%;
+  min-height: 100vh;
 
-    background: linear-gradient(to bottom, #03000fe9, #061637cb), url('../../../public/assets/cover.jpg') no-repeat center;
-    background-size: cover;
-    filter: blur(3px);
+  background: linear-gradient(to bottom, #03000fe9, #061637cb),
+    url("../../../public/assets/cover.jpg") no-repeat center;
+  background-size: cover;
+  filter: blur(3px);
 
-    position: relative;
-    top:    0px;
-  
+  position: relative;
+  top: 0px;
 }
 
 .title {
   margin: auto;
-  margin:30px 0;
+  margin: 30px 0;
   color: white;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   letter-spacing: 1.5px;
 }
 
-.controls{
-    top: 40vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 40px;
-    margin: 20px;
+.controls {
+  top: 40vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  margin: 20px;
 }
 
-.center{
+.center {
   width: 50vw;
   min-height: 40vh;
   position: absolute;
@@ -57,22 +56,36 @@
   align-items: center;
 }
 
-p{
+p {
   text-align: center;
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
-.concepts{
-  margin: 10px 0;
-  width: 60%;
-  color: #FF1744;
+.concepts {
+  margin: 5px 0;
+  width: 70%;
+  color: #ff1744;
   text-align: left;
+
+  display: flex;
+  align-items: center;
+}
+
+.concept {
+  display: flex;
+  width: 50%;
+  justify-content: flex-start;
+  gap: 20px;
+  margin-left: 20px;
+}
+.concept p {
+  color: #ff1744;
 }
 
 .input {
   width: 30vw;
   height: 35px;
   margin: 20px;
-  background: url('../../../public/assets/search.png') no-repeat 10px;
+  background: url("../../../public/assets/search.png") no-repeat 10px;
   background-size: 20px;
   padding-left: 40px;
   border-radius: 20px;
@@ -82,30 +95,30 @@ p{
   background-color: #3135467f;
   color: white;
   font-size: 16px;
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
 
-.clear{
-    height: 37px;
-    border-radius: 20px;
+.clear {
+  height: 37px;
+  border-radius: 20px;
 
-    background-color: #CC0B30;
-    color: white;
-    border: none;
+  background-color: #cc0b30;
+  color: white;
+  border: none;
 
-    font-family: 'Roboto';
-    font-size: 16px;
-    width: 100px;
+  font-family: "Roboto";
+  font-size: 16px;
+  width: 100px;
 }
 
 .movies {
-    width: 95%;
-    flex-grow: 1;
-    margin-top: -230px;
-    z-index: 2;
+  width: 95%;
+  flex-grow: 1;
+  margin-top: -230px;
+  z-index: 2;
 
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
 }
