--- a/lucene-research/movies/src/components/Charts/Charts.module.css
+++ b/lucene-research/movies/src/components/Charts/Charts.module.css
@@ -17,66 +17,59 @@
   box-shadow: rgba(61, 13, 13, 0.19) 0px 10px 20px,
     rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
-  border: 1px solid #5D6A79;
+  border: 1px solid #5d6a79;
 }
 
-.title{
-    width: 100%;
-    height: 50px;
+.title {
+  width: 100%;
+  height: 50px;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #FF6384;
-    margin-bottom: 15px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #5d6a793b;
-    /* background-color: red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ff6384;
+  margin-bottom: 15px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #5d6a793b;
+  /* background-color: red; */
 }
 
-.charts{
-    width: 100%;
-    min-height: 550px;
-    /* max-height: 500px; */
-    flex-grow: 1;
+.charts {
+  width: 100%;
+  min-height: 550px;
+  /* max-height: 500px; */
+  flex-grow: 1;
 
-    flex-wrap: wrap;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 
-    padding: 10px;
-    /* background-color: green; */
+  padding: 10px;
+  /* background-color: green; */
 }
 
-.bar{
-    height: 100%;
-    min-height: 400px;
-    
-    width: 45%;
-    display: flex;
-    align-items: center;
-    /* background-color: yellow; */
+.bar {
+  height: 100%;
+  min-height: 400px;
+  width: 45%;
+  display: flex;
+  align-items: center;
+  /* background-color: yellow; */
 }
 
-
-.line{
-    height: 100%;
-    min-height: 400px;
-
-    width: 45%;
-
-    /* background-color: red; */
-
+.line {
+  height: 100%;
+  min-height: 400px;
+  width: 45%;
+  /* background-color: red; */
 }
 
-
-.nivoSize{
+.nivoSize {
   height: 500px;
 }
 
-
-.summary{
+.summary {
   width: 100%;
   min-height: 150px;
   /* background-color: red; */
@@ -86,7 +79,6 @@
   align-items: center;
   justify-content: flex-start;
   flex-wrap: wrap;
-
 }
 
 .points {
@@ -95,7 +87,7 @@
   min-height: 100px;
   display: flex;
   align-items: center;
-  justify-content:space-around;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
@@ -110,22 +102,21 @@
   justify-content: center;
   text-align: center;
   /* background-color: red; */
-
 }
 
-.point:nth-last-child(1){
+.point:nth-last-child(1) {
   border: none;
 }
 @media only screen and (max-width: 600px) {
-   .charts{
+  .charts {
     flex-direction: column;
-   }
-
-   .bar {
-    width: 100%;
-   }
-
-   .line{
-    width: 100%;
-   }
   }
+
+  .bar {
+    width: 100%;
+  }
+
+  .line {
+    width: 100%;
+  }
+}
